@@ -1,3 +1,7 @@
+2012-01-22  Andreas Kirschbaum
+
+	* Add "login" and "logout" skin events.
+
 2012-01-20  Andreas Kirschbaum
 
 	* Change color of text inputfields that do not have the focus. Now
